# fastapi_tdd_docker

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  release.sh
.github/workflows/: main.yml
project/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  entrypoint.sh  pyproject.toml
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  summaries.py
project/db/: Dockerfile
project/migrations/models/: 0_20230328202716_init.py
project/tests/: conftest.py  test_summaries.py  test_summaries_unit.py
