[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Luis Ek <52711401+lek18@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
asyncpg = "0.27.0"
tortoise-orm = "0.19.3"
aerich = "0.7.1"
gunicorn = "20.1.0"
pytest-xdist = "3.2.1"
newspaper3k = "0.2.8"
lxml-html-clean = "^0.2.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "7.2.2"
pytest-cov = "4.0.0"
pre-commit = "^4.0.1"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
